--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import url(../src/vendor/normalize.css);
+
+@import url(../src/vendor/fonts/fonts.css);
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
