--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,15 +1,29 @@
 .app {
   min-height: 100vh;
-  min-width: 1070px;
+  min-width: 320px;
   max-width: 1200px;
   background-color: white;
   margin: 0 auto;
   padding: 20px 30px 40px 30px;
   color: black;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 240px 1fr;
   gap: 30px;
   box-sizing: border-box;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
+}
+
+@media screen and (max-width: 980px) {
+  .app {
+    grid-template-columns: 225px 1fr;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .app {
+    grid-template-columns: 1fr;
+    padding-top: 0;
+    row-gap: 10px;
+  }
 }
 
