--- a/src/components/FlightsList/FlightsList.module.css
+++ b/src/components/FlightsList/FlightsList.module.css
@@ -28,3 +28,14 @@
   font-size: 24px;
   margin-top: 100px;
 }
+
+@media screen and (max-width: 980px) {
+  .list {
+    gap: 20px;
+  }
+
+  .text {
+    font-size: 21px;
+    margin-top: 80px;
+  }
+}
