--- a/src/components/AirlineCheckbox/AirlineCheckbox.module.css
+++ b/src/components/AirlineCheckbox/AirlineCheckbox.module.css
@@ -39,3 +39,14 @@
     font-size: 12px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .label {
+    font-size: 10px;
+    margin-left: 2px;
+  }
+
+  .span_price {
+    font-size: 10px;
+  }
+}
