--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -110,18 +110,19 @@
   }
   
   .filters {
-    display: none;
-    transition: display 0.4s ease;
-  }
-
-  .filters_opened {
-    display: flex;
     flex-direction: row;
     column-gap: 10px;
     row-gap: 20px;
     margin: 0 0 20px 0;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease;
+  }
+
+  .filters_opened {
+    max-height: 500px;
   }
 
   .text_input {
@@ -134,5 +135,31 @@
     height: 25px;
     border: 1px solid #4682B4;
     border-radius: 10px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .filters {
+    column-gap: 7px;
+    row-gap: 15px;
+    margin: 0 0 15px 0;
+  }
+
+  .heading {
+    font-size: 12px;
+    line-height: 10px;
+  }
+
+  .label {
+    font-size: 10px;
+  }
+
+  .text_input {
+    font-size: 10px;
+    max-width: 100px;
+  }
+
+  .btn {
+    height: 20px;
   }
 }
