--- a/src/components/FlightsList/FlightsList.module.css
+++ b/src/components/FlightsList/FlightsList.module.css
@@ -16,6 +16,7 @@
   width: 30%;
   text-align: center;
   cursor: pointer;
+  font-size: 16px;
 }
 
 .btn:hover {
@@ -37,5 +38,24 @@
   .text {
     font-size: 21px;
     margin-top: 80px;
+  }
+
+  .btn {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 435px) {
+  .list {
+    gap: 15px;
+  }
+
+  .text {
+    font-size: 18px;
+    margin-top: 50px;
+  }
+
+  .btn {
+    width: 100%;
   }
 }
