--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -106,23 +106,23 @@
     flex-direction: column;
     top: 0;
     background-color: white;
-    padding-top: 20px;
   }
   
   .filters {
     flex-direction: row;
     column-gap: 10px;
     row-gap: 20px;
-    margin: 0 0 20px 0;
     flex-wrap: wrap;
     justify-content: space-evenly;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.5s ease;
+    padding-top: 20px;
   }
 
   .filters_opened {
     max-height: 500px;
+    margin: 0 0 20px 0;
   }
 
   .text_input {
@@ -142,6 +142,10 @@
   .filters {
     column-gap: 7px;
     row-gap: 15px;
+    padding-top: 10px;
+  }
+
+  .filters_opened {
     margin: 0 0 15px 0;
   }
 
