--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -106,6 +106,7 @@
     flex-direction: column;
     top: 0;
     background-color: white;
+    padding-top: 20px
   }
   
   .filters {
@@ -117,7 +118,6 @@
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.5s ease;
-    padding-top: 20px;
   }
 
   .filters_opened {
@@ -139,10 +139,13 @@
 }
 
 @media screen and (max-width: 320px) {
+  .section {
+    padding-top: 15px
+  }
+  
   .filters {
     column-gap: 7px;
     row-gap: 15px;
-    padding-top: 10px;
   }
 
   .filters_opened {
@@ -152,6 +155,7 @@
   .heading {
     font-size: 12px;
     line-height: 10px;
+    margin: 0 0 5px 0;
   }
 
   .label {
